# HealthPredict-AI

./: render.yaml
ml_service/: .env  app.py  auth_server.py  pyproject.toml  requirements.txt
ml_service/data/: timeline.json
ml_service/services/: chatbot_service.py  ocr_service.py  report_analyzer_service.py
review 1 (2)/review 1/ai medicine and disease prediction/: DEPLOY.md  render.yaml
review 1 (2)/review 1/ai medicine and disease prediction/backend-node/: server.js
review 1 (2)/review 1/ai medicine and disease prediction/backend-node/routes/: admin.js  ai.js
review 1 (2)/review 1/ai medicine and disease prediction/frontend/: package-lock.json  package.json
review 1 (2)/review 1/ai medicine and disease prediction/frontend/src/: index.css  main.jsx
review 1 (2)/review 1/ai medicine and disease prediction/frontend/src/components/: AppointmentModal.jsx  DiagnosisDoctorSuggestion.jsx  DoctorFinder.jsx  HealthAssistant.jsx
review 1 (2)/review 1/ai medicine and disease prediction/frontend/src/context/: AuthContext.jsx
review 1 (2)/review 1/ai medicine and disease prediction/frontend/src/modules/admin/: AdminDashboard.jsx
review 1 (2)/review 1/ai medicine and disease prediction/frontend/src/pages/: AdminLogin.jsx  AppointmentHistory.jsx  BookDoctor.jsx  Chat.jsx  Dashboard.jsx  DoctorList.jsx  Emergency.jsx  FamilyHealth.jsx  HealthScore.jsx  HealthTimeline.jsx  LifestyleCoach.jsx  MedicineInteractions.jsx  MentalWellness.jsx  ModelEvaluationPage.jsx  OCR.jsx  Orders.jsx  Predict.jsx  PredictionPage.jsx  PrescriptionPage.jsx  ReportAnalyzer.jsx
(+9 files in other folders)
